# Password_Tester_Prototype

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: DOCUMENTATION.md
password_tester/: celery.py  settings.py  urls.py
pwdchecker/: forms.py  models.py  tasks.py  tests_forms.py  tests_utils.py  tests_views.py  urls.py  utils.py  views.py
pwdchecker/data/: diceware_words.txt
pwdchecker/migrations/: 0002_alter_disallowedword_word_and_more.py
pwdchecker/static/pwdchecker/: main.js  styles.css
pwdchecker/templates/pwdchecker/: index.html
pwdchecker/tests/: __init__.py  test_forms.py  test_utils.py  test_views.py
templates/pwdchecker/: index.html
